# cucumber-cpp

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  .travis.yml.swp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Gemfile  HISTORY.md  README.md  README.txt  ageTest.sh  appveyor.bat  appveyor.yml  fixCucumber.ps1  osx-install-qt.sh  run-all.sh  run-linux.sh  run-windows.ps1  run.sh  scriptBDD.sh  travis.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: format.yml  linux-build.yml  qt5.yml  run-all.yml  ubuntu-latest.yml  ubuntu.yml  windows-build.yml  windows.yml
cmake/modules/: FindAsio.cmake  FindGMock.cmake  FindTCLAP.cmake  FindValgrind.cmake  Findcgreen.cmake  GitVersion.cmake
examples/: CMakeLists.txt
examples/Calc/: CMakeLists.txt
examples/Calc/CalcFeatures/: BoostCalculatorSteps.cpp  CalculatorSteps.cpp  CppSpecCalculatorSteps.cpp  GTestCalculatorSteps.cpp
examples/Calc/features/step_definitions/: BoostCalculatorSteps.cpp  CalculatorSteps.cpp  CgreenCalculatorSteps.cpp  CppSpecCalculatorSteps.cpp  FuncArgsCalculatorSteps.cpp  GTestCalculatorSteps.cpp  QtTestCalculatorSteps.cpp
examples/Calc/src/: Calculator.cpp  Calculator.hpp
examples/CalcQt/: CMakeLists.txt  README.txt
examples/CalcQt/CalcQt/: CalcQt.cpp  CalculatorWidget.cpp  CalculatorWidget.h
examples/CalcQt/CalcQtFeatures/: BoostCalculatorQtSteps.cpp
examples/CalcQt/CalcQtFeatures/features/: addition.feature  behavior.feature  initialization.feature  subtraction.feature
examples/CalcQt/features/step_definitions/: BoostCalculatorQtSteps.cpp  CalculatorQtSteps.cpp  CgreenCalculatorQtSteps.cpp  GTestCalculatorQtSteps.cpp  QtTestCalculatorQtSteps.cpp
examples/CalcQt/features/support/: env.rb
examples/CalcQt/src/: CalcQt.cpp  Calculator.cpp  Calculator.hpp  CalculatorWidget.cpp  CalculatorWidget.h  CalculatorWidget.hpp
examples/FeatureShowcase/: CMakeLists.txt  README.txt
examples/FeatureShowcase/features/: table.feature
examples/FeatureShowcase/features/step_definitions/: TableSteps.cpp  TagSteps.cpp
examples/FeatureShowcase/table/: TableSteps.cpp
examples/FeatureShowcase/tag/: TagSteps.cpp
examples/FizzBuzz/: CMakeLists.txt
examples/FizzBuzz/features/: FizzBuzz.feature
examples/FizzBuzz/features/step_definitions/: FizzBuzzSteps.cpp
examples/FizzBuzz/src/: FizzBuzzReporter.c  FizzBuzzReporter.h
examples/Tag/: CMakeLists.txt  TagSteps.cpp
examples/age/: CMakeLists.txt
examples/age/features/: ageCalculation.feature
examples/age/features/step_definitions/: ageCalculator.cpp
features/: simple.feature
features/specific/: boost_specific.feature  escaping.feature  predicate_message.feature  simple.feature  wire_encoding.feature
features/step_definitions/: RpnCalculatorSteps.cpp  cucumber_cpp_mappings.rb  cucumber_cpp_steps.rb
features/support/: HelperFunctions.hpp  RpnCalculator.cpp  env.rb  hooks.rb
include/cucumber-cpp/: autodetect.hpp  core.hpp  defs.hpp  deprecated-defs.hpp
include/cucumber-cpp/internal/: ContextManager.hpp  CukeCommands.hpp  CukeDll.hpp  CukeEngine.hpp  CukeEngineImpl.hpp  RegistrationMacros.hpp  Scenario.hpp  Table.hpp  defs.hpp
include/cucumber-cpp/internal/connectors/wire/: ProtocolHandler.hpp  WireProtocol.hpp  WireProtocolCommands.hpp  WireServer.hpp
include/cucumber-cpp/internal/drivers/: BoostDriver.hpp  CppSpecDriver.hpp  DriverSelector.hpp  FakeDriver.hpp  GTestDriver.hpp  GenericDriver.hpp  QtTestDriver.hpp
include/cucumber-cpp/internal/hook/: HookMacros.hpp  HookRegistrar.hpp  Tag.hpp
include/cucumber-cpp/internal/step/: BreakpointSupport.hpp  StepMacros.hpp  StepManager.hpp
include/cucumber-cpp/internal/utils/: FunctionSignature.hpp  IndexSequence.hpp  Regex.hpp  qtCapture.hpp
include/cukebins/: cukebins.hpp  wireserver.hpp
include/cukebins/internal/: ContextManager.hpp  CukeCommands.hpp  CukeEngine.hpp  CukeEngineImpl.hpp  CukeFixture.hpp  Macros.hpp  PPMacros.hpp  RegistrationMacros.hpp  Scenario.hpp  StepManager.hpp  Table.hpp
include/cukebins/internal/connectors/wire/: ProtocolHandler.hpp  WireProtocol.hpp  WireProtocolCommands.hpp  WireServer.hpp
include/cukebins/internal/drivers/: BoostDriver.hpp  CppSpecDriver.hpp  FakeDriver.hpp  GTestDriver.hpp
include/cukebins/internal/hook/: HookMacros.hpp  HookRegistrar.hpp  Tag.hpp
include/cukebins/internal/step/: StepMacros.hpp  StepManager.hpp
include/cukebins/internal/utils/: Regex.hpp
src/: BreakpointSupport.cpp  CMakeLists.txt  ContextManager.cpp  CukeCommands.cpp  CukeEngine.cpp  CukeEngineImpl.cpp  HookRegistrar.cpp  Regex.cpp  Scenario.cpp  StepManager.cpp  Table.cpp  Tag.cpp  main.cpp
src/cmake/: cucumber-cpp-nomain.pc.in  cucumber-cpp.pc.in
src/connectors/wire/: WireProtocol.cpp  WireProtocolCommands.cpp  WireServer.cpp
src/drivers/: BoostDriver.cpp  CgreenDriver.cpp  CppSpecDriver.cpp  GTestDriver.cpp  GenericDriver.cpp  QtTestDriver.cpp
tests/: CMakeLists.txt
tests/integration/: ContextHandlingTest.cpp  GTestDriverTest.cpp  HookRegistrationTest.cpp  StepRegistrationTest.cpp  TaggedHookRegistrationTest.cpp  WireProtocolTest.cpp  WireServerTest.cpp
tests/integration/drivers/: BoostDriverTest.cpp  CgreenDriverTest.cpp  CppSpecDriverTest.cpp  GTestDriverTest.cpp  GenericDriverTest.cpp  QtTestDriverTest.cpp
tests/unit/: BasicStepTest.cpp  ContextManagerTest.cpp  CukeCommandsTest.cpp  RegexTest.cpp  StepCallChainTest.cpp  StepManagerTest.cpp  TableTest.cpp  TagTest.cpp  ageCalculator.cpp
tests/utils/: ContextManagerTestDouble.hpp  CukeCommandsFixture.hpp  DriverTestRunner.hpp  HookRegistrationFixture.hpp  InvokeTestHelper.hpp  StepManagerTestDouble.hpp
